# jeddak

./: Dockerfile  README.md  build.sh  config_demo.yaml  dump.rdb  requirements.txt  setup.py
common/factory/: algorithm_factory.py  df_factory.py  encryptor_factory.py  factory.py  logger_factory.py  m2i_factory.py  messenger_factory.py  parameter_factory.py  response_factory.py  serving_factory.py
common/util/: constant.py  conversion.py  random.py
coordinator/core/: online_cache.py  sqlite_manager.py  task_chain.py  task_coordinator.py
coordinator/web/: console.py  console_route.py
doc/guide/: develop_guide.md  quickstart.md
example/: standalone-start.sh  standalone-test.sh
example/conf/: aligner.json  data_loader.json  data_saver.json  dpgbdt.json  evaluate.json  glm.json  (+3 more)
fl/: algorithm.py
messenger/: README.md
privacy/crypto/PSI/: CMakeLists.txt  PSI.i  PSI.py  PSI_wrap.cxx  cmPSI.py  setup.py
privacy/crypto/PSI/blake2/: CMakeLists.txt
privacy/crypto/PSI/include/: Blake.h  Defines.h  PRNG.h  PsiReceiver.h  PsiSender.h  RandomOracle.h  utils.h
privacy/crypto/PSI/src/: AES.cpp  Blake.cpp  PRNG.cpp  PsiReceiver.cpp  PsiSender.cpp  RandomOracle.cpp  utils.cpp
privacy/crypto/symmetric/oblivious_transfer/source/: CMakeLists.txt  big_256_56.c  ecdh_ED25519.c  ecdh_support.c  ecp_ED25519.c  fp_25519.c  test.c
privacy/crypto/symmetric/ot_extension/: CMakeLists.txt  IKNP_OTe.py  iknpOTe.i  iknpOTe.py  iknpOTe_wrap.cxx  setup.py
privacy/crypto/symmetric/ot_extension/include/: AES.h  Defines.h  PRNG.h  iknpOTeReceiver.h  iknpOTeSender.h  utils.h
privacy/crypto/symmetric/ot_extension/src/: PRNG.cpp  iknpOTeReceiver.cpp  iknpOTeSender.cpp  utils.cpp
(+150 files in other folders)
